--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300;400;900&display=swap" rel="stylesheet">
 
     
-    <title>React App</title>
+    <title>Arcadia's Fitness Club</title>
   </head>
   <body>
     
